# swagger/swagger.json
@@ -166,7 +166,7 @@
         "tags": [
           "Doctor"
         ],
-        "description": "get all clics of a doctor",
+        "description": "Get clincs of a specific doctor",
         "parameters": [
           {
             "name": "id",
@@ -473,6 +473,35 @@
             "bearerAuth": []
           }
         ]
+      }
+    },
+    "/api/doctors/test-upload": {
+      "post": {
+        "tags": [
+          "Test"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "file"
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/doctors/{{where{id:id}": {
